src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ClearChoice</fullName>
        <description>Process for a ClearChoice Patient</description>
        <isActive>true</isActive>
        <values>
            <fullName>Consult Completed</fullName>
        </values>
        <values>
            <fullName>Consult Scheduled</fullName>
        </values>
        <values>
            <fullName>No Show</fullName>
        </values>
        <values>
            <fullName>Not Scheduled</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Patient Left</fullName>
        </values>
        <values>
            <fullName>Rescheduled Consult</fullName>
        </values>
        <values>
            <fullName>Rescheduled Seminar</fullName>
        </values>
        <values>
            <fullName>Same Day Cancelation</fullName>
        </values>
        <values>
            <fullName>Same Day Cancellation</fullName>
        </values>
        <values>
            <fullName>Seminar Completed</fullName>
        </values>
        <values>
            <fullName>Seminar Scheduled</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALERT__c</fullName>
        <description>Make notes about patients who have not showed for appointments, have significant health issues or make repeated calls to call center.</description>
        <label>ALERT!</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompanied_By_Name__c</fullName>
        <description>Name of the individual that will be accompanying the prospective patient to the consult</description>
        <label>Accompanied By Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompanied_By__c</fullName>
        <description>Relationship of the person accompanying the consult</description>
        <label>Accompanied By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Accompanied</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Link__c</fullName>
        <formula>IF(
CONTAINS(Marketing_Source__c,&quot;A&quot;) ||
CONTAINS(Marketing_Source__c,&quot;B&quot;) ||
CONTAINS(Marketing_Source__c,&quot;C&quot;) ||
CONTAINS(Marketing_Source__c,&quot;D&quot;) ||
CONTAINS(Marketing_Source__c,&quot;E&quot;) ||
CONTAINS(Marketing_Source__c,&quot;F&quot;) ||
CONTAINS(Marketing_Source__c,&quot;F&quot;) ||
CONTAINS(Marketing_Source__c,&quot;H&quot;) ||
CONTAINS(Marketing_Source__c,&quot;I&quot;) ||
CONTAINS(Marketing_Source__c,&quot;J&quot;) ||
CONTAINS(Marketing_Source__c,&quot;K&quot;) ||
CONTAINS(Marketing_Source__c,&quot;L&quot;) ||
CONTAINS(Marketing_Source__c,&quot;M&quot;) ||
CONTAINS(Marketing_Source__c,&quot;N&quot;) ||
CONTAINS(Marketing_Source__c,&quot;O&quot;) ||
CONTAINS(Marketing_Source__c,&quot;P&quot;) ||
CONTAINS(Marketing_Source__c,&quot;Q&quot;) ||
CONTAINS(Marketing_Source__c,&quot;R&quot;) ||
CONTAINS(Marketing_Source__c,&quot;S&quot;) ||
CONTAINS(Marketing_Source__c,&quot;T&quot;) ||
CONTAINS(Marketing_Source__c,&quot;U&quot;) ||
CONTAINS(Marketing_Source__c,&quot;V&quot;) ||
CONTAINS(Marketing_Source__c,&quot;W&quot;) ||
CONTAINS(Marketing_Source__c,&quot;X&quot;) ||
CONTAINS(Marketing_Source__c,&quot;Y&quot;) ||
CONTAINS(Marketing_Source__c,&quot;Z&quot;),&quot;&quot;,
HYPERLINK(&quot;https://sites.google.com/a/clearchoice.com/marketingnumbers/home/&quot; &amp;  
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Marketing_Source__c,&quot;-&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;) &amp; &quot;/&quot;,
&quot;Click to View Ad Link&quot;,&quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Address_Status__c,&quot;Verified&quot;),
IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;),
IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;))
&amp; &quot; &quot; &amp;
IF(ISPICKVAL(StrikeForce1__USAddress_Address_Status__c,&quot;Verified&quot;),&quot;Verified&quot;,
&quot;Not Verified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Notes__c</fullName>
        <description>Notes for Advisors- White Glove Initiative</description>
        <label>Advisor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_Reason_Why_Unable_to_Make_Consult__c</fullName>
        <label>Any Reason Why UR Unable to Make Consult</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Scheduled_Status__c</fullName>
        <formula>IF( ISPICKVAL(Inbound_Call__c ,&quot;Non-Sales Call&quot;),&quot;Non-Sales Call&quot;,
IF( ISPICKVAL( Status ,&quot;Consult Completed&quot;), &quot;Showed&quot;,
CASE(Call_Result__c,
&quot;Consultation Scheduled&quot;,&quot;Consult Scheduled&quot;,
&quot;Seminar Scheduled&quot;,&quot;Seminar Scheduled&quot;,
&quot;Off Site Seminar Scheduled&quot;,&quot;Seminar Scheduled&quot;,
&quot;Same Day Rescheduled Consult&quot;,&quot;Consult Scheduled&quot;,
&quot;Cancelled Appointment&quot;,&quot;Consult Scheduled&quot;,
&quot;Same Day Cancellation Appointment&quot;,&quot;Not Scheduled&quot;,
&quot;Not Scheduled&quot;,&quot;Not Scheduled&quot;,
&quot;Out Bound Follow-up&quot;,&quot;Not Scheduled&quot;,
&quot;Shelved Call&quot;,&quot;Not Scheduled&quot;,
&quot;Fielded Lead&quot;,&quot;Not Scheduled&quot;,
&quot;Pending Reschedule&quot;,&quot;Consult Scheduled&quot;,
&quot;Renurture&quot;,&quot;Not Scheduled&quot;,
&quot;No Show&quot;,&quot;Consult Scheduled&quot;,
&quot;VIP Seminar Scheduled&quot;,&quot;Seminar Scheduled&quot;,

&quot;Not Scheduled&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Scheduled Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An appointment includes consultations and all seminars.</description>
        <inlineHelpText>An appointment includes consultations and all seminars.</inlineHelpText>
        <label>Appointment Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_interested_in_consult_3D_Iscan__c</fullName>
        <inlineHelpText>Are you interested in a free consultation and 3D iCat Scan with one of our specialists?

Objective: Identify their interest in moving to the next step of the process.</inlineHelpText>
        <label>Are you interested in consult &amp; 3D Iscan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_ClearChoice__c</fullName>
        <label>Ask ClearChoice</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Awareness_Level__c</fullName>
        <description>Added for LeadLife</description>
        <label>Awareness Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCP_DVD_Packet_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCP/DVD Packet Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_times_to_call__c</fullName>
        <description>For use with ProSites Appointment Request form</description>
        <label>Best times to call</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Noon</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Code__c</fullName>
        <description>Added for LeadLife</description>
        <label>Segment Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCAPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the API record tied to this lead.  Only available when the lead was created via an API call (and after 10/24/2012)</description>
        <label>CCAPI</label>
        <referenceTo>CCAPI__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Dashboard_Override__c</fullName>
        <description>This field is used by the CC Dashboard queries to override ownership rules.</description>
        <label>CC Dashboard Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>IMC - API</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Expo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Agent_Owner__c</fullName>
        <description>Call Center Agent who owns the prospective patient.</description>
        <label>Call Center Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andrea Palmer</fullName>
                </value>
                <value>
                    <fullName>Andrew Deutsch</fullName>
                </value>
                <value>
                    <fullName>Andy McMullen</fullName>
                </value>
                <value>
                    <fullName>Angela Wuelling</fullName>
                </value>
                <value>
                    <fullName>Audrey Dinges</fullName>
                </value>
                <value>
                    <fullName>Barb Emerick</fullName>
                </value>
                <value>
                    <fullName>Cameron Fisher</fullName>
                </value>
                <value>
                    <fullName>Carrie Strohmeyer</fullName>
                </value>
                <value>
                    <fullName>David Cardenas</fullName>
                </value>
                <value>
                    <fullName>Deb Scheer</fullName>
                </value>
                <value>
                    <fullName>Desi Garcia</fullName>
                </value>
                <value>
                    <fullName>Devonne Espinoza</fullName>
                </value>
                <value>
                    <fullName>Emily Fickinger</fullName>
                </value>
                <value>
                    <fullName>Eowyn Suchan</fullName>
                </value>
                <value>
                    <fullName>Heather Storer</fullName>
                </value>
                <value>
                    <fullName>Javier Mantilla</fullName>
                </value>
                <value>
                    <fullName>John Tolmich</fullName>
                </value>
                <value>
                    <fullName>Kesley Low</fullName>
                </value>
                <value>
                    <fullName>Kim Goehring</fullName>
                </value>
                <value>
                    <fullName>Kris Karge</fullName>
                </value>
                <value>
                    <fullName>Krista Schaad</fullName>
                </value>
                <value>
                    <fullName>Kristine Feuerborn</fullName>
                </value>
                <value>
                    <fullName>Lisa Avrett</fullName>
                </value>
                <value>
                    <fullName>Marcella Velasquez</fullName>
                </value>
                <value>
                    <fullName>Maria Jimenez</fullName>
                </value>
                <value>
                    <fullName>Marianne Mills</fullName>
                </value>
                <value>
                    <fullName>Mariann Maestas</fullName>
                </value>
                <value>
                    <fullName>Mary Helen Turner</fullName>
                </value>
                <value>
                    <fullName>Meridith Hertach</fullName>
                </value>
                <value>
                    <fullName>Michelle Hernandez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Agent_Team__c</fullName>
        <description>Formula to display the team that the call center agent is assigned to.</description>
        <formula>TEXT(Call_Center_Agent__r.Call_Center_Team__c)</formula>
        <label>Call Center Agent Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Center Agent (Lookup)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inbound_Call__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation Scheduled</fullName>
                </value>
                <value>
                    <fullName>Same Day Rescheduled Consult</fullName>
                </value>
                <value>
                    <fullName>Seminar Scheduled</fullName>
                </value>
                <value>
                    <fullName>Off Site Seminar Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled Appointment</fullName>
                </value>
                <value>
                    <fullName>Same Day Cancellation Appointment</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Out Bound Follow-up</fullName>
                </value>
                <value>
                    <fullName>Shelved Call</fullName>
                </value>
                <value>
                    <fullName>Fielded Lead</fullName>
                </value>
                <value>
                    <fullName>Pending Reschedule</fullName>
                </value>
                <value>
                    <fullName>Renurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_List_Notes__c</fullName>
        <label>Cancellation List Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Center_Address__c</fullName>
        <formula>Center__r.Street_1__c &amp; &quot; &quot; &amp; 
Center__r.Street_2__c &amp; BR() &amp; 
Center__r.City__c &amp; &quot;, &quot; &amp;  TEXT(Center__r.State__c) &amp; &quot; &quot; &amp; Center__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Directions_URL__c</fullName>
        <formula>Center__r.Map_Directions_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Directions URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Distance__c</fullName>
        <formula>Distance_To_Center__c</formula>
        <label>Center Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Location__c</fullName>
        <description>Specific Market or Division of ClearChoice Dental Implant Centers.</description>
        <label>Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Atlanta Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston Woburn</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Chicago Downers Grove</fullName>
                </value>
                <value>
                    <fullName>Chicago Naperville</fullName>
                </value>
                <value>
                    <fullName>Chicago Schaumburg</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas Arlington</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit Southfield</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Houston Woodlands</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Orange County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Torrance</fullName>
                </value>
                <value>
                    <fullName>Los Angeles West Covina</fullName>
                </value>
                <value>
                    <fullName>Miami Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Minneapolis Roseville</fullName>
                </value>
                <value>
                    <fullName>New Jersey Roseland</fullName>
                </value>
                <value>
                    <fullName>New Market Not Yet Open</fullName>
                </value>
                <value>
                    <fullName>Orlando Maitland</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Fort Washington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Center_Master_Location__c</fullName>
        <description>Maps satellite locations to their respective Center Master locations</description>
        <formula>CASE( TEXT(Center_Location__c) ,  
     &quot;Chicago Deerfield/Northbrook&quot;, &quot;Chicago&quot;, 
      &quot;Chicago Naperville&quot;, &quot;Chicago&quot;, 
      &quot;Denver Colorado Springs&quot;, &quot;Denver&quot;, 
       &quot;Denver Glenwood Springs&quot;, &quot;Denver&quot;,
       &quot;Dallas Fort Worth&quot;,&quot;Dallas&quot;, 
       &quot;Phoenix Mesa&quot;, &quot;Phoenix&quot;, 
       &quot;Miami Fort Lauderdale&quot;, &quot;Miami&quot;,
       &quot;San Francisco Oakland&quot;, &quot;San Jose&quot;,
       &quot;San Francisco Daly City&quot;, &quot;San Jose&quot;,
      &quot;Washington Chevy Chase&quot;, &quot;Washington Tysons Corner&quot;,
TEXT(Center_Location__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Master Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Name__c</fullName>
        <formula>Center__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Phone_Number__c</fullName>
        <formula>Center__r.Call_Center_Marketing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Sales_Region__c</fullName>
        <formula>text(Center__r.Sales_Region__c)</formula>
        <label>Center Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_TransID__c</fullName>
        <description>Just using this for the Transunion credit check - keeps me from burning another query on the limits</description>
        <formula>Center__r.TransUnion_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Center TransID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Center</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1) OR (2 AND 3) OR 4</booleanFilter>
            <errorMessage>The center you are trying to use is no longer avaliable.</errorMessage>
            <filterItems>
                <field>Center_Information__c.Allow_Center_Selection__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.CreatedDate</field>
                <operation>lessThan</operation>
                <value>3/1/2013 12:00 AM</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Call Center Agent Infocision, Call Center - Supervisor Infocision, System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Medical_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Medical History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearSites_ID__c</fullName>
        <description>For use with ClearSites webform - should hold a Vantage Office ID going forward</description>
        <label>ClearSites ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient returned call to confirm appointment.</description>
        <label>Confirmed Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsultBookedAtOffsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean: Was a consult booked at an Off-site Seminar? Not booked later because of the seminar, but actually at the seminar.</description>
        <inlineHelpText>Was a consult booked at an Off-site Seminar? (booked actually at the seminar)</inlineHelpText>
        <label>Consult Booked At Offsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Cancelled__c</fullName>
        <formula>IF(  ISPICKVAL(Call_Result__c , &quot;Cancelled Appointment&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulted_w_a_Doctor_before_Implants__c</fullName>
        <label>Consulted w/ a Doctor before @ Implants?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>More than Once</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Agency_Agent__c</fullName>
        <description>Name of the Agent at the external agency that worked with this lead</description>
        <label>Contact Agency Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Agency__c</fullName>
        <label>Contact Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>CSG</fullName>
                </value>
                <value>
                    <fullName>Infocision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Could_not_Reach__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Could not reach for confirmation</description>
        <label>Could not Reach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Checked__c</fullName>
        <description>Last time the Credit Score was checked</description>
        <label>Credit Score Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Color__c</fullName>
        <formula>IF(ISNULL(Credit_Score__c), &apos;Not Checked&apos;, 
IF(Credit_Score__c = 0, &apos;Black&apos;, 
IF(Credit_Score__c = 10, &apos;Blue&apos;, 
IF(Credit_Score__c &lt; 650, &apos;Red&apos;, 
IF(Credit_Score__c &lt; 720, &apos;Yellow&apos;, &apos;Green&apos;)))))</formula>
        <label>Credit Score Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Error__c</fullName>
        <description>Error Code Returned from Experian</description>
        <label>Credit Score Error</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Returned_Color__c</fullName>
        <description>Credit Score Color that is Returned from the Experian</description>
        <label>Credit Score Returned Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <description>Experian Credit Score</description>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Patient__c</fullName>
        <description>For Use with ProSites Appointment Request Form</description>
        <label>Current Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Using this field to display DOB for the call center, but preventing it from being edited on the lead page.</description>
        <formula>Date_of_Birth__c</formula>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime_Consult_Scheduled__c</fullName>
        <label>Date/Time Consult Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Booked__c</fullName>
        <label>Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Call_Back_Scheduled__c</fullName>
        <label>Date Call Back Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Consult_Scheduled_by_Rep__c</fullName>
        <label>Date Consult Scheduled by Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Consult_Scheduled__c</fullName>
        <description>Show day of the week for the consult date</description>
        <formula>CASE( MOD( DATEVALUE(DateTime_Consult_Scheduled__c) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show day of the week for the consult date</inlineHelpText>
        <label>Day Consult Scheduled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Condition__c</fullName>
        <label>Dental Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 Missing Teeth</fullName>
                </value>
                <value>
                    <fullName>3 or More Missing Teeth</fullName>
                </value>
                <value>
                    <fullName>Denture or Partial Denture</fullName>
                </value>
                <value>
                    <fullName>Bridge Failing</fullName>
                </value>
                <value>
                    <fullName>Crown(s) Failing</fullName>
                </value>
                <value>
                    <fullName>Cracked/Broken Teeth</fullName>
                </value>
                <value>
                    <fullName>Loose Teeth</fullName>
                </value>
                <value>
                    <fullName>Existing Implant Failing</fullName>
                </value>
                <value>
                    <fullName>Teeth Failing Beyond Repair</fullName>
                </value>
                <value>
                    <fullName>Perio Disease</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Visits__c</fullName>
        <description>Added for LeadLife</description>
        <label>Dental Visits</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dentures_Adhesive__c</fullName>
        <description>Added for LeadLife</description>
        <label>Dentures Adhesive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_To_Center_Checked__c</fullName>
        <description>Date / Time Distance to Center checked</description>
        <label>Distance To Center Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distance_To_Center__c</fullName>
        <description>Calculated distance in miles to the nearest center location.</description>
        <label>Distance To Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_to_Center_Error__c</fullName>
        <label>Distance to Center Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotCall_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead has requested not to be called on their mobile phone.</description>
        <inlineHelpText>Lead has requested not to be called on their mobile phone.</inlineHelpText>
        <label>Do Not Call Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Communicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Communicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Newsletter_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Newsletter Opt In</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>